--- a/selection-eghbali/style.css
+++ b/selection-eghbali/style.css
@@ -1,40 +1,99 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.synopsis {
+  color: #7E8184;  /*Light gray*/
+  font-style: italic;
 }
 
-h1 {
-  background-color: #DDE0E3;  /*Light gray*/
-  padding: 50px;
-  border: 1px solid #5D6063
-}
-
-p {
-  padding: 20px 0 20px 10px;  /*Top Right Bottom Left*/
-  margin-top: 25px;
-  margin-bottom: 50px;  /*Add this*/
-}
-
-em, strong {
-  background-color: #B2D6FF;  /*Light blue*/
-  display: inline;  /*This is the default for em and strong*/
-  margin: 50px;
-}
-
-div {
+.button:link,
+.button:visited {
+  display: block;
+  text-decoration: none;
   color: #FFF;
-  background-color: #5995DA;
+  background-color: #5995DA; /*Blue*/
   font-weight: bold;
   padding: 20px;
   text-align: center;
-  border: 2px solid #5D6063;
+  border: 2px solid #5D6063; /*Dark gray*/
   border-radius: 5px;
   width: 200px;
-  box-sizing: border-box;  /*Add this*/
-  margin: 20px auto;  /*Vertical Horizontal*/
+  margin: 20px auto;
 }
 
-body {
-  text-align: center;
+.button:hover,
+.button:visited:hover {
+  color: #FFF
+  background-color: #76AEED; /*Light blue*/
+}
+
+.button:active,
+.button:visited:active {
+  color: #FFF
+  background-color: #5995DA; /*Blue*/
+}
+
+#button-2 {
+  color: #5D6063; /*Dark gray*/
+}
+
+.page {
+  width: 600px;
+  margin: 0 auto;
+}
+
+p:first-of-type {
+  color: #7E8184;
+  font-style: italic;
+}
+
+p:last-of-type {
+  margin-bottom: 50px;
+}
+
+.call-to-action:link,
+.call-to-action:visited {
+  font-style: italic;
+  background-color: #EEB75A; /*Yellow*/
+}
+
+.call-to-action:hover,
+.call-to-action:visited:hover {
+  background-color: #F5CF8E; /*Light yellow*/
+}
+
+.call-to-action:active,
+.call-to-action:visited:active {
+  background-color: #EEB75A; /*Yellow*/
+}
+
+.synopsis em {
+  font-style: normal;
+}
+
+h1 em {
+  /*Some other styles*/
+}
+
+a:link {
+color: blue;
+text-decoration: none;
+}
+
+a:visited {
+color: purple;
+}
+
+a:hover {
+color: aqua;
+text-decoration: underline;
+}
+
+a:active {
+color: red;
+}
+
+a:visited:hover {
+  color: orange;
+}
+
+a:visited:active {
+  color: red;
 }
